# X-Raid-Bot

./: .env.example  .gitignore  Launch RaidBot.bat  Launch RaidBot.vbs  README.md  pyproject.toml
docs/ui-preview/: dashboard-refresh-preview.html
packaging/windows/: L8N Raid Bot.spec  README-beta.txt
raidbot/: __init__.py  chrome.py  config.py  dedupe.py  main.py  models.py  parser.py  runtime.py  service.py  telegram_client.py
raidbot/browser/: __init__.py  backends.py  models.py  pipeline.py
raidbot/desktop/: __init__.py  animated_button.py  app.py  assets.py  branding.py  chrome_profiles.py  controller.py  diagnostics.py  hotkeys.py  main_window.py  models.py  packaging.py  settings_page.py  storage.py  telegram_setup.py  theme.py  tray.py  web_dashboard.py  wizard.py  worker.py
raidbot/headless/: __init__.py  actions.py  app.py  config.py  listener.py  models.py  runner.py  runtime.py  session.py  window.py
scripts/: build_windows_beta.py  mock_dashboard_preview.py  smoke_test_packaged.py
tests/: test_browser_pipeline.py  test_chrome.py  test_config.py  test_dedupe.py  test_parser.py  test_runtime.py  test_service.py  test_telegram_client.py
tests/desktop/: test_app.py  test_chrome_profiles.py  test_controller.py  test_diagnostics.py  test_hotkeys.py  test_launcher.py  test_main_window.py  test_mock_dashboard_preview.py  test_models.py  test_packaging.py  test_settings_page.py  test_storage.py  test_telegram_setup.py  test_wizard.py  test_worker.py
tests/headless/: test_app.py  test_config.py  test_listener.py  test_runner.py  test_runtime.py  (+2 more)
(+144 files in other folders)
